[gd_scene load_steps=8 format=2]

[ext_resource path="res://Art/LOWER DOOR.png" type="Texture" id=1]
[ext_resource path="res://Actors/Door.gd" type="Script" id=2]
[ext_resource path="res://Art/UPPER DOOR.png" type="Texture" id=3]
[ext_resource path="res://Sounds/sfx/Sliding_Door.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 18.4211, 64.0351 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17.9825, 63.5964 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 130.702, 94.5 )

[node name="Door" type="Area2D"]
position = Vector2( 1, -15 )
scale = Vector2( 1.14, 1.14 )
z_index = -5
z_as_relative = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )

[node name="DoorTop" type="StaticBody2D" parent="."]
position = Vector2( 0, -165.556 )
collision_layer = 256
collision_mask = 0

[node name="Sprite" type="Sprite" parent="DoorTop"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorTop"]
position = Vector2( -0.877192, -3.74222 )
shape = SubResource( 1 )

[node name="DoorBottom" type="StaticBody2D" parent="."]
position = Vector2( 0, -42.2222 )
collision_layer = 256
collision_mask = 0

[node name="Sprite" type="Sprite" parent="DoorBottom"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorBottom"]
position = Vector2( -1.31579, 0.555611 )
shape = SubResource( 2 )

[node name="DoorSensor" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -0.877192, -97.3683 )
shape = SubResource( 3 )

[node name="DoorSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
